Made sure it works with MVC 4

--- a/nginx.config
+++ b/nginx.config
@@ -6,6 +6,7 @@ server {
   location / {
     root /vagrant/Mvc/;
     fastcgi_pass 127.0.0.1:9000;
+    fastcgi_index /;
     include /etc/nginx/fastcgi_params;
   }
 }
