--- a/Mvc/Mvc.csproj
+++ b/Mvc/Mvc.csproj
@@ -92,6 +92,7 @@
     </Compile>
     <Compile Include="Configuration\MvcApplication.cs" />
     <Compile Include="Configuration\WebApiApplication.cs" />
+    <Compile Include="Controllers\ServiceController.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Views\Web.config" />
